--- a/scipp-developer.yml
+++ b/scipp-developer.yml
@@ -21,10 +21,10 @@ dependencies:
   - numpy >=1.15.3
   - python
   - python-configuration
-  - pythreejs
+  - pythreejs >=2.2.1
   - pyyaml
   - tbb
-  - traitlets=4.3.3 # see https://github.com/jupyter-widgets/pythreejs/issues/334
+  - traitlets
 
   # Test
   - h5py
@@ -36,7 +36,7 @@ dependencies:
   - flake8
 
   # Docs
-  - ipython=7.2.0
+  - ipython
   - pandoc
   - sphinx=3.4.3 # see https://github.com/sphinx-doc/sphinx/issues/8885
   - sphinx_rtd_theme
